<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/firstEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="@android:string/no"
            android:ems="10"
            android:hint="@string/first_entry"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/secondEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@android:string/no"
            android:ems="10"
            android:hint="@string/second_entry"
            android:inputType="number|numberDecimal" />

        <RadioGroup
            android:id="@+id/actionGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/addRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addition" />

            <RadioButton
                android:id="@+id/subtractRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtraction" />
        </RadioGroup>

        <Button
            android:id="@+id/computeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="compute"
            android:text="@string/action" />

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>